@@ -306,6 +306,25 @@ tracker_db_interface_execute_vprocedure (TrackerDBInterface  *interface,
 	return ensure_result_set_state (result_set);
 }
 
+
+void
+tracker_db_interface_execute_vprocedure_no_reply (TrackerDBInterface  *interface,
+						  GError             **error,
+						  const gchar         *procedure,
+						  va_list              args)
+{
+	g_return_if_fail (TRACKER_IS_DB_INTERFACE (interface));
+	g_return_if_fail (procedure != NULL);
+
+	if (!TRACKER_DB_INTERFACE_GET_IFACE (interface)->execute_procedure_no_reply) {
+		g_critical ("Database abstraction %s doesn't implement the method execute_procedure()", G_OBJECT_TYPE_NAME (interface));
+		return;
+	}
+
+	TRACKER_DB_INTERFACE_GET_IFACE (interface)->execute_procedure_no_reply (interface, error, procedure, args);
+}
+
+
 TrackerDBResultSet *
 tracker_db_interface_execute_vprocedure_len (TrackerDBInterface  *interface,
 					     GError             **error,
